esbozada la landing

--- a/package.json
+++ b/package.json
@@ -76,6 +76,8 @@
 		"@fortawesome/fontawesome-svg-core": "^6.4.0",
 		"@fortawesome/free-solid-svg-icons": "^6.4.0",
 		"@fortawesome/react-fontawesome": "^0.2.0",
+		"lord-icon-element": "^4.1.1",
+		"lottie-web": "^5.12.2",
 		"prop-types": "^15.6.1",
 		"react": "^16.8.4",
 		"react-dom": "^16.8.4",
