--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
 		"react-dropzone": "^14.2.3",
 		"react-geocode": "^0.2.3",
 		"react-google-maps": "^9.4.5",
+		"react-icons": "^4.10.1",
 		"react-modal": "^3.16.1",
 		"react-polyfills": "0.0.1",
 		"react-range": "^1.8.14",
